// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorSelect /> should match its snapshot with props 1`] = `
<div
  className="sc-dkPtRN fIyQYQ k-Form-ColorSelect"
  name="test-slider-input"
>
  <div
    className="k-Form-ColorSelect__picker"
  >
    <div
      className="react-colorful"
    >
      <div
        className="react-colorful__saturation"
        style={
          Object {
            "backgroundColor": "hsl(117, 100%, 50%)",
          }
        }
      >
        <div
          aria-label="Color"
          aria-valuetext="Saturation 20%, Brightness 41%"
          className="react-colorful__interactive"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
        >
          <div
            className="react-colorful__pointer react-colorful__saturation-pointer"
            style={
              Object {
                "left": "20%",
                "top": "59.00000000000001%",
              }
            }
          >
            <div
              className="react-colorful__pointer-fill"
              style={
                Object {
                  "backgroundColor": "hsl(117, 11%, 37%)",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="react-colorful__hue react-colorful__last-control"
      >
        <div
          aria-label="Hue"
          aria-valuetext={117}
          className="react-colorful__interactive"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
        >
          <div
            className="react-colorful__pointer react-colorful__hue-pointer"
            style={
              Object {
                "left": "32.5%",
                "top": "50%",
              }
            }
          >
            <div
              className="react-colorful__pointer-fill"
              style={
                Object {
                  "backgroundColor": "hsl(117, 100%, 50%)",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <svg
      preserveAspectRatio="none"
      viewBox="0 0 10 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0 L0 41 L1 40 L2 38 L3 37 L4 35 L5 35 L6 33 L7 33 L8 32 L9 32 L10 32 L10 0z"
        fill="#ffffff"
      />
    </svg>
  </div>
  <div
    className="k-Form-ColorSelect__grid"
  >
    <div
      className="k-Form-ColorSelect__swatch"
      style={
        Object {
          "backgroundColor": "#556954",
        }
      }
    />
    <input
      aria-label="Code hexadécimal de la couleur"
      className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInput--small k-Form-TextInput--alignCenter"
      disabled={false}
      name="text"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      spellCheck="false"
      value="#556954"
    />
    <div
      className="k-Form-ColorSelect__witness"
    />
  </div>
</div>
`;

exports[`<ColorSelect /> should match its snapshot with props and children 1`] = `
<div
  className="sc-dkPtRN fIyQYQ k-Form-ColorSelect"
  name="test-slider-input"
>
  <div
    className="k-Form-ColorSelect__picker"
  >
    <div
      className="react-colorful"
    >
      <div
        className="react-colorful__saturation"
        style={
          Object {
            "backgroundColor": "hsl(117, 100%, 50%)",
          }
        }
      >
        <div
          aria-label="Color"
          aria-valuetext="Saturation 20%, Brightness 41%"
          className="react-colorful__interactive"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
        >
          <div
            className="react-colorful__pointer react-colorful__saturation-pointer"
            style={
              Object {
                "left": "20%",
                "top": "59.00000000000001%",
              }
            }
          >
            <div
              className="react-colorful__pointer-fill"
              style={
                Object {
                  "backgroundColor": "hsl(117, 11%, 37%)",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="react-colorful__hue react-colorful__last-control"
      >
        <div
          aria-label="Hue"
          aria-valuetext={117}
          className="react-colorful__interactive"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
        >
          <div
            className="react-colorful__pointer react-colorful__hue-pointer"
            style={
              Object {
                "left": "32.5%",
                "top": "50%",
              }
            }
          >
            <div
              className="react-colorful__pointer-fill"
              style={
                Object {
                  "backgroundColor": "hsl(117, 100%, 50%)",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <svg
      preserveAspectRatio="none"
      viewBox="0 0 10 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0 L0 41 L1 40 L2 38 L3 37 L4 35 L5 35 L6 33 L7 33 L8 32 L9 32 L10 32 L10 0z"
        fill="#ffffff"
      />
    </svg>
  </div>
  <div
    className="k-Form-ColorSelect__grid"
  >
    <div
      className="k-Form-ColorSelect__swatch"
      style={
        Object {
          "backgroundColor": "#556954",
        }
      }
    />
    <input
      aria-label="Code hexadécimal de la couleur"
      className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInput--small k-Form-TextInput--alignCenter"
      disabled={false}
      name="text"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      spellCheck="false"
      value="#556954"
    />
    <div
      className="k-Form-ColorSelect__witness"
    >
      <div
        className="k-u-flex k-u-flex-alignItems-center k-u-flex-justifyContent-end k-u-flex-gap-single"
        style={
          Object {
            "--color-primary-100": "#7ab3ff",
            "--color-primary-300": "#3d8fff",
            "--color-primary-500": "#006cff",
            "--color-primary-700": "#0052c2",
            "--color-primary-900": "#003885",
          }
        }
      >
        <span
          className="k-u-size-small k-u-weight-light"
        >
          Rendu :
        </span>
        <button
          className="sc-hKwDye kqhPmA k-Button k-Button--small k-Button--helium k-Button--fit-content k-Button--rounded"
          style={
            Object {
              "--Button-border-radius": null,
            }
          }
          type="button"
        >
          S’abonner
        </button>
      </div>
    </div>
  </div>
</div>
`;
